<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">台铃云端</string>
    <string name="action_settings">Settings</string>
    <string name="imageview">imageview</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="code_info">扫描您车上的二维码获取车辆的产品信息.</string>
    <string name="dialog_info">3秒后自动关闭</string>
    <string name="error_message">没有加载到数据!</string>
    <!-- 蓝牙相关字符说明  -->
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">未连接</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="title_paired_devices">配对的装备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用!</string>
    <string name="scanning">扫描未知设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有建立连接</string>
    <!-- 底部导航栏  -->
    <string name="remote_control">遥控</string>
    <string name="meter">仪表</string>
    <string name="ars">资讯</string>
    <string name="more">更多</string>
    <!-- 更多页面  -->
    <string name="logintoregister">登陆/注册</string>
    <string name="help_info">帮助信息</string>
    <string name="user_info">用户信息</string>
    <string name="user_other_info">其他信息填写</string>
    <string name="goods_info">产品信息</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <!-- 登录/注册  -->
    <string name="login_user_name">用户名</string>
    <string name="login_password">验证码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_keep_my_login_status">保持我的登录状态</string>
    <string name="login_change_password">修改密码</string>
    <string name="login_lookfor_password">找回密码</string>
    <string name="login_cancellation_usernmae">注销用户名</string>
    <string name="please_in_the_network_register_account">请在网络环境下注册账号</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name ="pin_code">获取验证码</string>
    <!-- 通用  -->
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_password">请输入验证码</string>
    <string name="scan">扫一扫</string>
    <string name="skip">跳过</string>
    <!-- 修改密码页面  -->
    <string name="amend_former_pwd">原密码</string>
    <string name="amend_new_pwd">新密码</string>
    <string name="amend_repeat_pwd">重复密码</string>
    <string name="amend_please_input_former_pwd">请输入原密码</string>
    <string name="amend_please_input_new_pwd">请输入新密码</string>
    <string name="amend_please_input_repeat_pwd">再次输入新密码</string>
    <string name="please_in_the_network_environment_amend_pwd">请在网络环境下修改密码</string>
    <string name="amend_submit">提交</string>
    <!-- 蓝牙密码 -->
    <string name="bluetooth_pwd">蓝牙密码</string>
    <string name="input_bluetooth_pwd">请输入蓝牙密码</string>
    <string name="please_turn_on_the_bluetooth_to_complete_this_operation">请开启蓝牙完成此项操作</string>
    <!-- 找回密码/注销账号   -->
    <string name="id_card">身份证号</string>
    <string name="look_mobile_phone">手机号码</string>
    <string name="name">姓名</string>
    <string name="input_name">输入姓名</string>
    <string name="input_id_number">请输入身份证号码</string>
    <string name="input_mobile_phone">请输入手机号码</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="input_confrim_password">请输入确认密码</string>
    <string name="confrim_cancell">确认注销</string>
    <string name="confrim">确认</string>
    <string name="look_login_pwd">登录密码</string>
    <string name="repeat_pwd">重复密码</string>
    <string name="confrim_pwd">确认密码</string>
    <string name="please_in_the_network_environment_account">请在网络环境下注销账号</string>
    <string name="phone_msg">您可以电话联系您的购买经销商, 找回您的密码</string>
    <string name="contact_phone">联系电话：</string>
    <string name="remark">注: 请在网络环境下注册，并开启蓝牙和GPS</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="input_bluetooth_password">输入蓝牙密码</string>
    <!-- 用户信息   -->
    <string name="sex">性别</string>
    <string name="user_male">男</string>
    <string name="userfemale">女</string>
    <string name="age">年龄</string>
    <string name="input_age">输入年龄</string>
    <string name="birthdate">生日</string>
    <string name="job">职业</string>
    <string name="main_use">主要用途</string>
    <string name="user_contact_phone">联系电话</string>
    <string name="user_edit">编辑</string>
    <!-- ARS功能  -->
    <string name="motors_failure">电机故障</string>
    <string name="turn_failure">转把故障</string>
    <string name="brake_failure">刹车故障</string>
    <string name="mixed_failure">综合故障</string>
    <string name="control_failure">控制器故障</string>
    <string name="common_failure">常见故障</string>
    <string name="instructions_failure">使用说明</string>
    <!-- 产品信息 -->
    <string name="car_type">车辆型号</string>
    <string name="car_color">车辆颜色</string>
    <string name="the_main_function">主要功能</string>
    <string name="goods_colors">颜色</string>
    <string name="production_date">生产日期</string>
    <string name="frame_number">车架号</string>
    <string name="motor_number">电机号</string>
    <string name="bluetooth_name">蓝牙名称</string>
    <string name="buletooth_match_pwd">蓝牙匹配密码</string>
    <string name="goods_scan">扫一扫</string>
    <!-- 设置 -->
    <string name="function_name">功能名称</string>
    <string name="open_or_close">开启/关闭</string>
    <string name="car_locking">车辆上锁</string>
    <string name="control_type">控制模式</string>
    <string name="car_unlocking">车辆解锁</string>
    <string name="find_car_alarm">寻车报警</string>
    <string name="saddles_open">鞍座开启</string>
    <string name="the_ride_report">本次骑行报告</string>
    <string name="the_automatic_fortification">自动设防</string>
    <string name="ars_automatic_voice_function">ARS自动语音功能</string>
    <string name="voice_control">静音布防</string>
    <string name="meter_speed_display">仪表速度显示</string>
    <string name="meter_batery_dispaly">仪表电量显示</string>
    <string name="version_update_prompt">版本更新提示</string>
    <string name="warning_message_prompts">警告消息提示</string>
    <string name="promotional_messages_push">促销消息推送</string>
    <string name="status_monitoring">状态监测</string>
    <string name="overload">超负荷监测</string>
    <string name="vibration_level">震动灵敏度</string>
    <string name="guard_distance">布防距离</string>
    <!-- 骑行报告 -->
    <string name="ride_report">骑行报告</string>
    <string name="the_mileage">本次行驶里程</string>
    <string name="travel_time">行驶时间</string>
    <string name="power_consumption">耗电量</string>
    <string name="maximum_speed">最高行驶速度</string>
    <string name="average_speed">平均行驶速度</string>
    <string name="energy_rating">能耗评分</string>
    <string name="control_temper">控制器温度</string>
    <string name="current">电流值</string>
    <string name="aata_recording_time">数据记录时间:</string>
    <string name="item_str">在设置一时无法修复的情况下,我立即着手建立替代系统、大概在5月18日晚上20点左右,恢复了院内用户与互联网的连接。</string>
    <string name="city_model">城市模式</string>
    <string name="mount_model">山地模式</string>
    <string name="track_model">赛道模式</string>
    <string name="ride_model">骑行模式</string>
    <string name="db_name">tailing_db.db</string>
    <!-- 震动灵敏度 -->
    <string name="vibration_level_1">1级（最灵）</string>
    <string name="vibration_level_2">2级</string>
    <string name="vibration_level_3">3级</string>
    <string name="vibration_level_4">4级</string>
    <string name="vibration_level_5">5级</string>
    <!-- 控制模式 -->
    <string name="controe_type_phone">手机控制</string>
    <string name="controe_type_hand">手柄控制</string>
</resources>
