<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:gravity="center"
	    android:background="@drawable/ride_dialog_bg">
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ride_model"
	        android:textSize="16sp"
	        android:layout_marginTop="10dp" />
	    <ImageView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/dialog_line"
	        android:layout_marginTop="15dp"
	        android:contentDescription="@string/imageview"/>
	    <LinearLayout android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="30dp" >
		    <RadioGroup
	            android:id="@+id/radiogroup_model"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >		
	            <RadioButton
	                android:id="@+id/radio_city"
	                style="@style/rd_model_style"
	                android:tag="1"
	                android:text="@string/track_model"
	    	        android:textSize="14sp"
	                android:gravity="bottom|center"
	                android:paddingTop="30dp" />
	            <RadioButton
	                android:id="@+id/radio_mount"
	                style="@style/rd_model_style"
	                android:tag="2"
	                android:text="@string/mount_model"
	    	        android:textSize="14sp"
	                android:gravity="bottom|center"
	                android:paddingTop="30dp"
	                android:layout_marginLeft="25dp" />
	            <RadioButton
	                android:id="@+id/radio_track"
	                style="@style/rd_model_style"
	                android:tag="3"
	                android:text="@string/city_model"
	    	        android:textSize="14sp"
	                android:gravity="bottom|center"
	                android:paddingTop="30dp"
	                android:layout_marginLeft="25dp" />
	        </RadioGroup>
        </LinearLayout>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confrim"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:id="@+id/button_confirm"
            android:background="@drawable/ride_dialog_selector"
            android:textColor="@color/white"/>
	</LinearLayout>    

</LinearLayout>
