<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg" >
    <com.ananda.tailing.bike.view.TitleBarView
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_bg">
        <FrameLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">
		    <!-- 原密码 -->
		    <LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"        
		        android:orientation="horizontal"
		        android:layout_marginTop="20dp">
		        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/edit_left">
			        <ImageView android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
			            android:src="@drawable/key"
	            		android:contentDescription="@string/imageview" />
			        <TextView android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/amend_former_pwd"			            
			            style="@style/amend_password_text_style" />
		        </LinearLayout>
	   	        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:id="@+id/former_pwd_linearlayout"
		            android:background="@drawable/input_all_selector">		        
			        <EditText android:layout_width="190dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/former_pwd_edittext"
			            android:hint="@string/amend_please_input_former_pwd"
			            android:tag="1"
		            	android:inputType="number"
			            style="@style/amend_password_style" />   			       
		        </LinearLayout>
		    </LinearLayout>
		    <ImageView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/formor_pwd_imageview"
	            android:visibility="gone"	     
	            android:contentDescription="@string/imageview"           
	            style="@style/register_imageview_style" />
	    </FrameLayout>
	    
	    <!-- 新密码 -->
	    <FrameLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			<LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"        
		        android:orientation="horizontal"
		        android:layout_marginTop="15dp" >
		        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/edit_left">
			        <ImageView android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
			            android:src="@drawable/new_key"
			            android:contentDescription="@string/imageview" />
			        <TextView android:layout_width="48dp"
			            android:layout_height="wrap_content"
			            android:text="@string/amend_new_pwd"
			            style="@style/amend_password_text_style" />
			    </LinearLayout>
	   	        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"		            
		            android:id="@+id/new_pwd_linearlayout"
		            android:background="@drawable/input_all_selector">
			        <EditText android:layout_width="190dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/new_pwd_edittext"
			            android:hint="@string/amend_please_input_new_pwd"
			            android:tag="2"			            
		            	android:inputType="number"
			            style="@style/amend_password_style" />
		        </LinearLayout>
		    </LinearLayout>
		    <ImageView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/new_pwd_imageview"
	            android:visibility="gone"	     
	            android:contentDescription="@string/imageview"           
	            style="@style/register_imageview_style" />
	    </FrameLayout>
		    			
			
	    <!-- 重复密码 -->
	    <FrameLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			<LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"        
		        android:orientation="horizontal"
		        android:layout_marginTop="15dp">
		        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/edit_left">
			        <ImageView android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
	            		android:contentDescription="@string/imageview"
			            android:src="@drawable/repeat_pwd" />
			        <TextView android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/amend_repeat_pwd"
			            android:textSize="16sp"
			            android:layout_gravity="center"  
			            android:textColor="@color/login_text_color" />
		        </LinearLayout>
		        <LinearLayout android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:id="@+id/repeat_pwd_linearlayout"
		            android:background="@drawable/input_all_selector">
			        <EditText android:layout_width="190dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/repeat_pwd_edittext"
			            android:hint="@string/amend_please_input_repeat_pwd"
			            android:tag="3"
		            	android:inputType="number"
			            style="@style/amend_password_style" />
		        </LinearLayout>
		    </LinearLayout>	 
		    <ImageView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/repeat_pwd_imageview"
	            android:visibility="gone"	     
	            android:contentDescription="@string/imageview"           
	            style="@style/register_imageview_style" />
	    </FrameLayout>   
		    
	    <!-- 记住密码 -->
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:layout_marginTop="20dp" >
	        <ImageView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/imageview"
	            android:background="@drawable/urgent_icon"/>
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/please_in_the_network_environment_amend_pwd"
	            android:textSize="16sp"
	            android:layout_marginLeft="10dp"
	            android:layout_gravity="center"
	            android:textColor="@color/check_hint_color" />
	    </LinearLayout>
	    
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="40dp"
	        android:layout_marginBottom="8dp"
	        android:gravity="center" >     
	        <Button android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/submit_button"
	            android:text="@string/amend_submit"
	            style="@style/common_button_style" />
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>
